--- a/1-el-dom/index.html
+++ b/1-el-dom/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>1. El DOM</h1>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
