--- a/1-el-dom/index.html
+++ b/1-el-dom/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>1. El DOM</h1>
+    <!-- El DOM no es parte de la especificación de JavaScript
+         El DOM es una web API -->
+    <ul>
+        <li>Document</li>
+        <li>Object</li>
+        <li>Model</li>
+    </ul>
     <script src="js/app.js"></script>
 </body>
 </html>
